# geany-plugins

./: .travis.yml  MAINTAINERS
geanygendoc/docs/: Makefile.am
gproject/src/: gproject-sidebar.c
lineoperations/src/: linefunctions.c
markdown/: Makefile.am
markdown/discount/: Csio.c  amalloc.c  amalloc.h  cstring.h  dumptree.c  flags.c  generate.c  html5.c  markdown.c  markdown.h  mkdio.c  mkdio.h  tags.c  tags.h  xml.c
markdown/src/: Makefile.am  viewer.c
workbench/src/: sidebar.c  wb_project.c
